--- a/templates/footer.html
+++ b/templates/footer.html
@@ -25,23 +25,13 @@
         </div>
       </div>
       <div class="col-md">
-         <div class="ftco-footer-widget mb-4">
-          <h2 class="ftco-heading-2">Events</h2>
-          <ul class="list-unstyled">
-            <li><a><span class="icon-long-arrow-right mr-2"></span>Gathering</a></li>
-            <li><a><span class="icon-long-arrow-right mr-2"></span>Nobar & Karaoke</a></li>
-            <li><a><span class="icon-long-arrow-right mr-2"></span>Fun Sports</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-md">
         <div class="ftco-footer-widget mb-4">
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">Jalan ... No. Kota Mataram, Nusa Tenggara Barat, Lombok</span></li>
-                <li><a href="tel://085...."><span class="icon icon-phone"></span><span class="text">+62 858 4554 9290</span></a></li>
-                <li><a href="mailto:...@gmail.com"><span class="icon icon-envelope"></span><span class="text">....@gmail.com</span></a></li>
+                <li><span class="icon icon-map-marker"></span><span class="text"> (Goebux's Cafe) Jl. Pesona Wisata, Pagutan - Kota Mataram, Nusa Tenggara Barat, Lombok</span></li>
+                <li><a href="tel://085...."><span class="icon icon-phone"></span><span class="text">+62 812-3623-3328</span></a></li>
+                <li><a href="mailto:...@gmail.com"><span class="icon icon-envelope"></span><span class="text">dpurwantama18@gmail.com</span></a></li>
               </ul>
             </div>
         </div>
