--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,7 +16,7 @@
                         <span class="icon-map-signs"></span>
                     </div>
                     <h3 class="mb-4">Address</h3>
-                    <p>Jalan ... No. Kota Mataram, Nusa Tenggara Barat, Lombok</p>
+                    <p>(Goebux's Cafe) Jl. Pesona Wisata, Pagutan - Kota Mataram, Nusa Tenggara Barat, Lombok</p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3 d-flex">
@@ -25,7 +25,7 @@
                         <span class="icon-phone2"></span>
                     </div>
                     <h3 class="mb-4">Contact Number</h3>
-                    <p><a href="tel://085....">+62 858 4554 9290</a></p>
+                    <p><a href="tel://085....">+62 812-3623-3328</a></p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3 d-flex">
@@ -34,7 +34,7 @@
                         <span class="icon-paper-plane"></span>
                     </div>
                     <h3 class="mb-4">Email Address</h3>
-                    <p><a href="mailto:...@gmail.com">....@gmail.com</a></p>
+                    <p><a href="mailto:...@gmail.com">dpurwantama18@gmail.com</a></p>
                 </div>
             </div>
         </div>
