--- a/templates/beranda.html
+++ b/templates/beranda.html
@@ -2,7 +2,7 @@
 
 	<link rel="stylesheet" href="../static/assets/css/style-landing.css">
 
-	<section class="hero-wrap js-fullheight" style="background-image: url('../static/assets/img/bg_4.png');"
+	<section class="hero-wrap js-fullheight" style="background-image: url('../static/assets/img/fjkt.jpg');"
 		data-section="home">
 		<div class="overlay"></div>
 		<div class="container">
