--- a/templates/header.html
+++ b/templates/header.html
@@ -94,7 +94,7 @@
       });
 
       document.getElementById("logout-btn").addEventListener("click", function () {
-        window.location.href = "/logout";
+        window.location.href = "/";
       });
     });
   </script>
