--- a/templates/about.html
+++ b/templates/about.html
@@ -83,12 +83,12 @@
 						</div>
 						<div class="text d-flex align-items-center pt-3 text-center">
 							<div>
-								<span class="position mb-2">Sekertaris</span>
+								<span class="position mb-2">Sekretaris</span>
 								<h3 class="mb-4">Leli</h3>
 								<div class="faded">
-									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+									<p>Seperti embun pagi yang menyegarkan hati, aku akan menjadi seorang sekretaris yang selalu siap membantu dan menyuntikkan semangat baru setiap hari. Halo aku Leli</p>
 									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
+										<li class="ftco-animate"><a href="https://www.instagram.com/_.lelli?igsh=MXIxODVxdmVjbHZqMg=="><span class="icon-instagram"></span></a>
 										</li>
 									</ul>
 								</div>
@@ -104,7 +104,7 @@
 						</div>
 						<div class="text d-flex align-items-center pt-3 text-center">
 							<div>
-								<span class="position mb-2">Sekertaris</span>
+								<span class="position mb-2">Sekretaris</span>
 								<h3 class="mb-4">Ersa</h3>
 								<div class="faded">
 									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
@@ -130,7 +130,7 @@
 								<div class="faded">
 									<p>Bagai capit tuan krab, aku siap mencapit kas kalian dengan tersenyum karir. Ai ai ai..halo aku Arya si Bendahara Fanbase🤩</p>
 									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
+										<li class="ftco-animate"><a href="Instagram.com/rya_ndi7"><span class="icon-instagram"></span></a>
 										</li>
 									</ul>
 								</div>
@@ -149,9 +149,9 @@
 								<span class="position mb-2">CO Media</span>
 								<h3 class="mb-4">Thiar</h3>
 								<div class="faded">
-									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+									<p>Si penyuka jokes bapak-bapak, hai aku thiar</p>
 									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
+										<li class="ftco-animate"><a href="https://www.instagram.com/thiarelkanta?igsh=YThpaTZ6aWI2bzlq&utm_source=qr"><span class="icon-instagram"></span></a>
 										</li>
 									</ul>
 								</div>
@@ -171,9 +171,9 @@
 								<span class="position mb-2">CO Merchandise</span>
 								<h3 class="mb-4">Yosia</h3>
 								<div class="faded">
-									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+									<p>Seperti gapura yang selalu menyambut kalian, haiii aku Yosia👹</p>
 									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
+										<li class="ftco-animate"><a href="https://www.instagram.com/yosia.nvrska?igsh=MWFkNWxldHpvbDF3Mg=="><span class="icon-instagram"></span></a>
 										</li>
 									</ul>
 								</div>
