--- a/templates/beranda.html
+++ b/templates/beranda.html
@@ -15,7 +15,7 @@
 					<span class="watch">Watch Video</span>
 				</a>
 			</p>
-					<h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Website FJKT48 Lombok</h1>
+					<h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Selamat Datang Di Komunitas FJKT48 Lombok</h1>
 					<p class="mb-4" style="text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);"
 						data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Temukan semangat dan kebersamaan
 						dalam komunitas penggemar JKT48 di Pulau Lombok.</p>
@@ -95,7 +95,7 @@
 			<a class="btn" type="button" href="/gallery">Read more</a>
 		  </div>
 		  <div class="intro__video">
-			<video src="../static/assets/img/luxury.mp4" autoplay muted loop></video>
+			<video src="../static/assets/img/fjkt48.mp4" autoplay muted loop></video>
 		  </div>
 		</div>
 	</section>
