--- a/templates/about.html
+++ b/templates/about.html
@@ -86,7 +86,7 @@
 								<span class="position mb-2">Sekretaris</span>
 								<h3 class="mb-4">Leli</h3>
 								<div class="faded">
-									<p>Seperti embun pagi yang menyegarkan hati, aku akan menjadi seorang sekretaris yang selalu siap membantu dan menyuntikkan semangat baru setiap hari. Halo aku Leli</p>
+									<p>Bagaikan mentari pagi yang menghangatkan hati, aku akan menjadi sekretaris yang selalu siap membantu dan memberikan semangat baru setiap hari. Halo, aku Leli!</p>
 									<ul class="ftco-social text-center">
 										<li class="ftco-animate"><a href="https://www.instagram.com/_.lelli?igsh=MXIxODVxdmVjbHZqMg=="><span class="icon-instagram"></span></a>
 										</li>
@@ -107,7 +107,7 @@
 								<span class="position mb-2">Sekretaris</span>
 								<h3 class="mb-4">Ersa</h3>
 								<div class="faded">
-									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+									<p>Dengan senyum manis dan sentuhan lembutku, aku akan menjadi sekretaris yang selalu siap membantu dengan penuh kehangatan. Halo, aku Ersa!</p>
 									<ul class="ftco-social text-center">
 										<li class="ftco-animate"><a href="https://www.instagram.com/baiqersaa._?igsh=enJ2anF4cW1kbmZx"><span class="icon-instagram"></span></a>
 										</li>
@@ -192,9 +192,9 @@
 								<span class="position mb-2">CO Acara</span>
 								<h3 class="mb-4">Daffa</h3>
 								<div class="faded">
-									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+									<p>Langit gelap, bintang pudar, tapi hatiku tetap bercahaya. Aku Daffa, malaikat jatuh yang tak pernah menyerah. Dengan semangat dari surga, aku akan selalu berusaha!</p>
 									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
+										<li class="ftco-animate"><a href="https://www.instagram.com/naufal_alamin?igsh=MWFhOXlyMHhrdXFsaQ=="><span class="icon-instagram"></span></a>
 										</li>
 									</ul>
 								</div>
@@ -244,7 +244,7 @@
 											pengalaman, dan menyalurkan dukungan kepada idol ibu kota yaitu JKT48.</p>
 										<p class="name">Lutfhi</p>
 										<span class="position">Wakil Ketua, Founder</span>
-										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
+										<li class="ftco-animate"><a href="https://www.instagram.com/muhammad_luthfie10?igsh=aWF6bWxjZTVoZmd6"><span class="icon-instagram"></span></a>
 										</li>
 									</div>
 								</div>
