videonyadi unmuted hehe

--- a/templates/beranda.html
+++ b/templates/beranda.html
@@ -95,7 +95,7 @@
 			<a class="btn" type="button" href="/gallery">Read more</a>
 		  </div>
 		  <div class="intro__video">
-			<video src="../static/assets/img/fjkt48.mp4" autoplay muted loop></video>
+			<video src="../static/assets/img/fjkt48.mp4" autoplay loop controls></video>
 		  </div>
 		</div>
 	</section>
