update about dan merch

--- a/templates/merchandise.html
+++ b/templates/merchandise.html
@@ -14,7 +14,7 @@
               <div class="trending_content">
                 <p class="trending_p">Product</p>
                 <h2 class="trending_title">Exclusive JKT48 Merchandise!</h2>
-                <a href="#shop" class="trending_btn">Shop Now!</a>
+                <a href="#room" class="trending_btn">Shop Now!</a>
               </div>
               <div class="img_conta">
                 <img src="../static/assets/img/product/banner-2.png" alt="header" class="img_large" />
