--- a/templates/beranda.html
+++ b/templates/beranda.html
@@ -95,7 +95,7 @@
 			<a class="btn" type="button" href="/gallery">Read more</a>
 		  </div>
 		  <div class="intro__video">
-			<video src="../static/assets/img/fjkt48.mp4" autoplay muted loop></video>
+			<video src="../static/assets/img/gallery/fjkt48.mp4" autoplay muted loop></video>
 		  </div>
 		</div>
 	</section>
@@ -126,7 +126,7 @@
 							<span class="icon-phone2"></span>
 						</div>
 						<h3 class="mb-4">Contact Number</h3>
-						<p><a href="tel://085....">+62 812-3623-3328</a></p>
+						<p><a href="tel://081236233328">+62 812-3623-3328</a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex">
@@ -135,7 +135,7 @@
 							<span class="icon-paper-plane"></span>
 						</div>
 						<h3 class="mb-4">Email Address</h3>
-						<p><a href="mailto:...@gmail.com">dpurwantama18@gmail.com</a></p>
+						<p><a href="mailto:dpurwantama18@gmail.com">dpurwantama18@gmail.com</a></p>
 					</div>
 				</div>
 			</div>
