--- a/templates/footer.html
+++ b/templates/footer.html
@@ -30,8 +30,8 @@
             <div class="block-23 mb-3">
               <ul>
                 <li><span class="icon icon-map-marker"></span><span class="text"> (Goebux's Cafe) Jl. Pesona Wisata, Pagutan - Kota Mataram, Nusa Tenggara Barat, Lombok</span></li>
-                <li><a href="tel://085...."><span class="icon icon-phone"></span><span class="text">+62 812-3623-3328</span></a></li>
-                <li><a href="mailto:...@gmail.com"><span class="icon icon-envelope"></span><span class="text">dpurwantama18@gmail.com</span></a></li>
+                <li><a href="tel://081236233328"><span class="icon icon-phone"></span><span class="text">+62 812-3623-3328</span></a></li>
+                <li><a href="mailto:dpurwantama18@gmail.com"><span class="icon icon-envelope"></span><span class="text">dpurwantama18@gmail.com</span></a></li>
               </ul>
             </div>
         </div>
