--- a/templates/header.html
+++ b/templates/header.html
@@ -38,8 +38,6 @@
       #user-account .login-text {
           display: none;
       }
-
-      /* Media query to change icon to text at smaller screen sizes */
       @media (max-width: 650px) {
           #user-account .fas.fa-user {
               display: none;
@@ -47,7 +45,7 @@
 
           #user-account .login-text {
               display: inline;
-              color: white; /* Warna teks Login */
+              color: white; 
           }
       }
     </style>
