--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -9659,11 +9659,11 @@ textarea.form-control {
   height: auto;
 }
 .img_conta .img_large {
-  width: 80%;
+  max-height: 320px;
 }
 .img_conta .img_small {
   position: absolute;
-  width: 50%;
+  width: 45%;
   bottom: 0;
   left: 0;
   border: 3px solid white;
