--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,82 +1,6 @@
 {% include 'header.html' %}
 
-<style>
-.button-container {
-    display: flex;
-    justify-content: center; /* Center the buttons horizontally */
-    margin-top: -2rem;
-    margin-bottom: 16px;
-    flex-wrap: wrap; /* Allow buttons to wrap on smaller screens */
-}
-
-.button-container button {
-    margin: 8px 16px; /* Add horizontal margin between buttons */
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    background-color: #2A629A;
-    color: rgb(243, 242, 242);
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    flex: 1; /* Allow buttons to grow and fill available space */
-    max-width: 300px; /* Optional: Set a max-width for buttons */
-}
-
-.button-container button:hover {
-    background-color: #1f4a7a; /* Darker shade on hover */
-}
-
-#fjkt-button a, #fan-art-button a {
-    color: white; /* Text color */
-    text-decoration: none; /* Remove underline from links */
-}
-
-#fjkt-button a:hover, #fan-art-button a:hover {
-    color: white; /* Text color on hover */
-}
-
-/* Media query for smaller screens */
-@media (max-width: 650px) {
-    .button-container button {
-        padding: 10px; /* Adjust padding for smaller screens */
-        width: 100%; /* Make buttons take full width */
-        max-width: none; /* Remove max-width constraint */
-    }
-}
-.centered-bold {
-  text-align: center;
-  font-weight: bold;
-}
-
-#filterable-cards {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px; 
-}
-
-/* Tambahkan class baru untuk gambar */
-.responsive-image {
-  max-width: 350px; /* Mengatur lebar maksimum gambar sesuai dengan lebar parent element */
-  height: auto; /* Mengatur ketinggian secara otomatis agar gambar tidak terdistorsi */
-}
-
-@media (max-width: 768px) {
-  body {
-    overflow-x: hidden; /* Nonaktifkan scroll horizontal */
-  }
-  .block-20 img {
-      max-width: 100%;
-      display: block;
-      margin: 0 auto;
-  }
-  .col-md-4 {
-    margin: 0 auto; /* Menengahkan kolom */
-    padding-bottom: 5rem;
-  }
-}
-</style>
+<link rel="stylesheet" href="../static/assets/css/style-gallery.css">
 
 <section class="ftco-section bg-light" data-section="gallery">
   <div class="container">
@@ -94,84 +18,84 @@
           <div class="item">
             <div class="project">
               <div class="img">
-                <img src="../static/assets/img/person_1.jpg" class="img-fluid" alt="Colorlib Template">
-                <a href="../static/assets/img/person_1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+                <img src="../static/assets/img/gallery/banner-1.jpg" class="img-fluid" alt="Image">
+                <a href="../static/assets/img/gallery/banner-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
                   <span class="icon-expand"></span>
                 </a>
               </div>
               <div class="text px-4">
-                <h3><a href="#">Office Interior Design</a></h3>
-                <span>Interior Design</span>
+                <h3><a href="#">Gathering</a></h3>
+                <span>FJKT</span>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="project">
               <div class="img">
-                <img src="../static/assets/img/person_2.jpg" class="img-fluid" alt="Colorlib Template">
-                <a href="../static/assets/img/person_2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+                <img src="../static/assets/img/gallery/banner-2.png" class="img-fluid fanartku" alt="Image">
+                <a href="../static/assets/img/gallery/banner-2.png" class="icon image-popup d-flex justify-content-center align-items-center">
                   <span class="icon-expand"></span>
                 </a>
               </div>
               <div class="text px-4">
-                <h3><a href="#">Office Interior Design</a></h3>
-                <span>Interior Design</span>
+                <h3><a href="#">Freya</a></h3>
+                <span>Fan Art</span>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="project">
               <div class="img">
-                <img src="../static/assets/img/person_3.jpg" class="img-fluid" alt="Colorlib Template">
-                <a href="../static/assets/img/person_3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+                <img src="../static/assets/img/gallery/banner-3.jpg" class="img-fluid" alt="Image">
+                <a href="../static/assets/img/gallery/banner-3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
                   <span class="icon-expand"></span>
                 </a>
               </div>
               <div class="text px-4">
-                <h3><a href="#">Office Interior Design</a></h3>
-                <span>Interior Design</span>
+                <h3><a href="#">Gathering</a></h3>
+                <span>FJKT</span>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="project">
               <div class="img">
-                <img src="../static/assets/img/person_4.jpg" class="img-fluid" alt="Colorlib Template">
-                <a href="../static/assets/img/person_4.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+                <img src="../static/assets/img/gallery/banner-4.png" class="img-fluid fanartku" alt="Image">
+                <a href="../static/assets/img/gallery/banner-4.png" class="icon image-popup d-flex justify-content-center align-items-center">
                   <span class="icon-expand"></span>
                 </a>
               </div>
               <div class="text px-4">
-                <h3><a href="#">Office Interior Design</a></h3>
-                <span>Interior Design</span>
+                <h3><a href="#">Adel</a></h3>
+                <span>Fan Art</span>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="project">
               <div class="img">
-                <img src="../static/assets/img/person_1.jpg" class="img-fluid" alt="Colorlib Template">
-                <a href="../static/assets/img/person_1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+                <img src="../static/assets/img/gallery/banner-5.jpg" class="img-fluid" alt="Image">
+                <a href="../static/assets/img/gallery/banner-5.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
                   <span class="icon-expand"></span>
                 </a>
               </div>
               <div class="text px-4">
-                <h3><a href="#">Office Interior Design</a></h3>
-                <span>Interior Design</span>
+                <h3><a href="#">Gathering</a></h3>
+                <span>FJKT</span>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="project">
               <div class="img">
-                <img src="../static/assets/img/person_2.jpg" class="img-fluid" alt="Colorlib Template">
-                <a href="../static/assets/img/person_2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+                <img src="../static/assets/img/gallery/banner-6.png" class="img-fluid fanartku" alt="Image">
+                <a href="../static/assets/img/gallery/banner-6.png" class="icon image-popup d-flex justify-content-center align-items-center">
                   <span class="icon-expand"></span>
                 </a>
               </div>
               <div class="text px-4">
-                <h3><a href="#">Office Interior Design</a></h3>
-                <span>Interior Design</span>
+                <h3><a href="#">Zee</a></h3>
+                <span>Fan Art</span>
               </div>
             </div>
           </div>
@@ -196,10 +120,10 @@
     </div>
     <div class="row px-2 mt-4 gap-3" id="filterable-cards" style="margin-bottom: 3rem;">
       <div class="row d-flex">
-        <div class="col-md-4 ftco-animate">
+        <div class="col-md-4 ftco-animate" style="margin-bottom: 3rem;">
           <div class="blog-entry justify-content-end">
-            <a href="#" data-toggle="modal" data-target="#myModal" class="block-20">
-              <img src="../static/assets/img/team-3.jpg" style="max-width: 350px;" alt="Image">
+            <a href="#" data-toggle="modal" data-target="#myModal" class="block-211 ">
+              <img src="../static/assets/img/fjkt.jpg" alt="Image" >
             </a>                  
             <div class="text mt-3 float-right d-block">
               <div class="d-flex align-items-center pt-2 mb-4 topp">
@@ -217,76 +141,24 @@
                 <p class="mb-0"><a href="#" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">Comment <span class="ion-ios-arrow-round-forward"></span></a></p>
                 <p class="ml-auto mb-0">
                   <a href="#" class="mr-2">Admin</a>
-                  <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
+                  <a href="#" class="meta-chat" data-toggle="modal" data-target="#commentsModal"><span class="icon-chat"></span> 3</a>
                 </p>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-md-4 ftco-animate">
-          <div class="blog-entry justify-content-end">
-            <a href="#" data-toggle="modal" data-target="#myModal" class="block-20">
-              <img src="../static/assets/img/team-3.jpg" style="max-width: 350px;" alt="Image">
-            </a>                  
-            <div class="text mt-3 float-right d-block">
-              <div class="d-flex align-items-center pt-2 mb-4 topp">
-                <div class="one mr-3">
-                  <span class="day">12</span>
-                </div>
-                <div class="two">
-                  <span class="yr">2019</span>
-                  <span class="mos">March</span>
-                </div>
-              </div>
-              <h3 class="heading"><a href="#" data-toggle="modal" data-target="#myModal">Growth</a></h3>
-              <p>Lorem Ipsum</p>
-              <div class="d-flex align-items-center mt-4 meta">
-                <p class="mb-0"><a href="#" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">Comment <span class="ion-ios-arrow-round-forward"></span></a></p>
-                <p class="ml-auto mb-0">
-                  <a href="#" class="mr-2">Admin</a>
-                  <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 ftco-animate">
-          <div class="blog-entry justify-content-end">
-            <a href="#" data-toggle="modal" data-target="#myModal" class="block-20">
-              <img src="../static/assets/img/team-3.jpg" style="max-width: 350px;" alt="Image">
-            </a>                  
-            <div class="text mt-3 float-right d-block">
-              <div class="d-flex align-items-center pt-2 mb-4 topp">
-                <div class="one mr-3">
-                  <span class="day">12</span>
-                </div>
-                <div class="two">
-                  <span class="yr">2019</span>
-                  <span class="mos">March</span>
-                </div>
-              </div>
-              <h3 class="heading"><a href="#" data-toggle="modal" data-target="#myModal">Growth</a></h3>
-              <p>Lorem Ipsum</p>
-              <div class="d-flex align-items-center mt-4 meta">
-                <p class="mb-0"><a href="#" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">Comment <span class="ion-ios-arrow-round-forward"></span></a></p>
-                <p class="ml-auto mb-0">
-                  <a href="#" class="mr-2">Admin</a>
-                  <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
+        
       </div> 
     </div>
   
     <h3 class="centered-bold" id="fan-section" style="margin-bottom: 4rem;">FAN ART</h3>
     <div class="row px-2 mt-4 gap-3" id="filterable-cards">
       <div class="row d-flex">
-        <div class="col-md-4 ftco-animate">
+
+        <div class="col-md-4 ftco-animate" style="margin-bottom: 3rem;">
           <div class="blog-entry justify-content-end">
             <a href="#" data-toggle="modal" data-target="#myModal" class="block-20">
-              <img src="../static/assets/img/team-3.jpg" style="max-width: 350px;" alt="Image">
+              <img src="../static/assets/img/gallery/banner-2.png" alt="Image">
             </a>                  
             <div class="text mt-3 float-right d-block">
               <div class="d-flex align-items-center pt-2 mb-4 topp">
@@ -304,66 +176,13 @@
                 <p class="mb-0"><a href="#" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">Comment <span class="ion-ios-arrow-round-forward"></span></a></p>
                 <p class="ml-auto mb-0">
                   <a href="#" class="mr-2">Admin</a>
-                  <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
+                  <a href="#" class="meta-chat" data-toggle="modal" data-target="#commentsModal"><span class="icon-chat"></span> 3</a>
                 </p>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-md-4 ftco-animate">
-          <div class="blog-entry justify-content-end">
-            <a href="#" data-toggle="modal" data-target="#myModal" class="block-20">
-              <img src="../static/assets/img/team-3.jpg" style="max-width: 350px;" alt="Image">
-            </a>                  
-            <div class="text mt-3 float-right d-block">
-              <div class="d-flex align-items-center pt-2 mb-4 topp">
-                <div class="one mr-3">
-                  <span class="day">12</span>
-                </div>
-                <div class="two">
-                  <span class="yr">2019</span>
-                  <span class="mos">March</span>
-                </div>
-              </div>
-              <h3 class="heading"><a href="#" data-toggle="modal" data-target="#myModal">Growth</a></h3>
-              <p>Lorem Ipsum</p>
-              <div class="d-flex align-items-center mt-4 meta">
-                <p class="mb-0"><a href="#" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">Comment <span class="ion-ios-arrow-round-forward"></span></a></p>
-                <p class="ml-auto mb-0">
-                  <a href="#" class="mr-2">Admin</a>
-                  <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 ftco-animate">
-          <div class="blog-entry justify-content-end">
-            <a href="#" data-toggle="modal" data-target="#myModal" class="block-20">
-              <img src="../static/assets/img/team-3.jpg" style="max-width: 350px;" alt="Image">
-            </a>                  
-            <div class="text mt-3 float-right d-block">
-              <div class="d-flex align-items-center pt-2 mb-4 topp">
-                <div class="one mr-3">
-                  <span class="day">12</span>
-                </div>
-                <div class="two">
-                  <span class="yr">2019</span>
-                  <span class="mos">March</span>
-                </div>
-              </div>
-              <h3 class="heading"><a href="#" data-toggle="modal" data-target="#myModal">Growth</a></h3>
-              <p>Lorem Ipsum</p>
-              <div class="d-flex align-items-center mt-4 meta">
-                <p class="mb-0"><a href="#" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">Comment <span class="ion-ios-arrow-round-forward"></span></a></p>
-                <p class="ml-auto mb-0">
-                  <a href="#" class="mr-2">Admin</a>
-                  <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
+        
       </div> 
     </div>
       
@@ -382,7 +201,7 @@
       </div>
       <div class="modal-body">
       <div class="card">
-          <img src="../static/assets/img/team-3.jpg" class="card-img-top" alt="...">
+          <img src="../static/assets/img/fjkt.jpg" class="card-img-top" alt="...">
           <div class="card-body">
           <h5 class="card-title">Why Lead Generation is Key for Business Growth</h5>
           <p class="card-text">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
@@ -399,6 +218,55 @@
       <button type="button" class="btn btn-primary">Submit Comment</button>
       </div>
   </div>
+  </div>
+</div>
+
+<!-- Modal Structure -->
+<div class="modal fade" id="commentsModal" tabindex="-1" role="dialog" aria-labelledby="commentsModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="commentsModalLabel">Comments</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+              <!-- Comment Section -->
+              <div class="comment-section">
+                  <div class="comment">
+                      <div class="comment-avatar">
+                          <img src="../static/assets/img/fanart1.png" alt="Avatar" />
+                      </div>
+                      <div class="comment-content">
+                          <h6>@Sit Amet</h6>
+                          <span class="comment-date">12 January 2024</span>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla fermentum varius metus quis molestie.</p>
+                          <div class="comment-actions">
+                              <span class="likes mb-0"><i class="ion-ios-thumbs-up"></i> 72</span>
+                              <p class="ml-auto mb-0">
+                              <span class="edit"><i class="icon-pencil"></i></span>
+                              <span class="delete"><i class="ion-ios-trash"></i></span></p>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="comment">
+                    <div class="comment-avatar">
+                        <img src="../static/assets/img/fanart1.png" alt="Avatar" />
+                    </div>
+                    <div class="comment-content">
+                        <h6>@Sit Amet</h6>
+                        <span class="comment-date">12 January 2024</span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla fermentum varius metus quis molestie.</p>
+                        <div class="comment-actions">
+                            <span class="likes mb-0"><i class="ion-ios-thumbs-up"></i> 72</span>
+                        </div>
+                    </div>
+                  </div>
+                  <!-- Additional comments can be added here -->
+              </div>
+          </div>
+      </div>
   </div>
 </div>
 
