--- a/templates/up-merchandise.html
+++ b/templates/up-merchandise.html
@@ -39,7 +39,6 @@
           display: none;
       }
 
-      /* Media query to change icon to text at smaller screen sizes */
       @media (max-width: 650px) {
           #user-account .fas.fa-user {
               display: none;
@@ -47,7 +46,7 @@
 
           #user-account .login-text {
               display: inline;
-              color: white; /* Warna teks Login */
+              color: white; 
           }
       }
     </style>
@@ -65,8 +64,8 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav nav ml-auto">
-	          <li class="nav-item"><a href="/upgallery" class="nav-link" data-nav-section="gallery"><span>Gallery</span></a></li>
-	          <li class="nav-item"><a href="/upmerchandise" class="nav-link" data-nav-section="merchandise"><span>Merchandise</span></a></li>
+	          <li class="nav-item"><a href="/upgallery" class="nav-link" data-nav-section="gallery"><span>Up Gallery</span></a></li>
+	          <li class="nav-item"><a href="/upmerchandise" class="nav-link" data-nav-section="merchandise"><span>Up Merchandise</span></a></li>
             <li class="nav-item">
               <a href="#" class="nav-link" id="user-account"><span><i class="fas fa-user"></i> <span class="login-text">Logout</span></span></a>
             </li>
@@ -102,7 +101,7 @@
     <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 heading-section text-center ftco-animate">
-                <span class="subheading">Merchandise</span>
+                <span class="subheading">Up Merchandise</span>
                 <h2 class="mb-4">See Our Products</h2>
                 <p>Yuk, lengkapi koleksimu dengan berbagai merchandise kece dari Fanbase JKT48 Lombok!</p>
             </div>
@@ -125,7 +124,7 @@
                     <div class="room__card">
                         <div class="img">
                             <a href="../static/assets/img/product/{{item.gambar}}" class="icon image-popup d-flex justify-content-center align-items-center" >
-                                <img src="../static/assets/img/product/{{item.gambar}}" class="block-20" alt="Colorlib Template" style="height: 450px;">
+                                <img src="../static/assets/img/product/{{item.gambar}}" class="block-20" alt="Check Your Image" style="height: 450px;">
                             </a>
                         </div>
                         <div class="room__card__details">
@@ -262,4 +261,73 @@
   }
 </script>
 
-{% include 'footer.html' %}
+<footer class="ftco-footer ftco-section">
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-md">
+          <div class="ftco-footer-widget mb-4">
+            <h2 class="ftco-heading-2">FJKT48 Lombok</h2>
+            <p>Menyatukan para penggemar JKT48 di Pulau Lombok, berbagi pengalaman, dan menyalurkan dukungan kepada idol ibu kota yaitu JKT48.</p>
+            <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
+              <li class="ftco-animate"><a href="https://x.com/fjkt48_lombokuy"><span class="icon-twitter"></span></a></li>
+              <li class="ftco-animate" style="text-align: center;"><a href="https://www.tiktok.com/@fjkt48.lombok" style="font-size: 24px; padding: 3px; align-items: center;"><i class="fab fa-tiktok"></i></a></li>
+              <li class="ftco-animate"><a href="https://www.instagram.com/fjkt48.lombok"><span class="icon-instagram"></span></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="ftco-footer-widget mb-4 ml-md-4">
+            <h2 class="ftco-heading-2">Links</h2>
+            <ul class="list-unstyled">
+              <li><a href="/upcontact"><span class="icon-long-arrow-right mr-2"></span>Up Gallery</a></li>
+              <li><a href="/upmerchandise"><span class="icon-long-arrow-right mr-2"></span>Up Merchandise</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="ftco-footer-widget mb-4">
+              <h2 class="ftco-heading-2">Have a Questions?</h2>
+              <div class="block-23 mb-3">
+                <ul>
+                  <li><span class="icon icon-map-marker"></span><span class="text"> (Goebux's Cafe) Jl. Pesona Wisata, Pagutan - Kota Mataram, Nusa Tenggara Barat, Lombok</span></li>
+                  <li><a href="tel://081236233328"><span class="icon icon-phone"></span><span class="text">+62 812-3623-3328</span></a></li>
+                  <li><a href="mailto:dpurwantama18@gmail.com"><span class="icon icon-envelope"></span><span class="text">dpurwantama18@gmail.com</span></a></li>
+                </ul>
+              </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <p>
+              &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Fanbase JKT48 Lombok
+          </p>			
+        </div>
+      </div>
+    </div>
+  </footer>
+  
+  
+  
+    <!-- loader -->
+    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
+  
+  
+    <script src="../static/assets/js/jquery.min.js"></script>
+    <script src="../static/assets/js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="../static/assets/js/popper.min.js"></script>
+    <script src="../static/assets/js/bootstrap.min.js"></script>
+    <script src="../static/assets/js/jquery.easing.1.3.js"></script>
+    <script src="../static/assets/js/jquery.waypoints.min.js"></script>
+    <script src="../static/assets/js/jquery.stellar.min.js"></script>
+    <script src="../static/assets/js/owl.carousel.min.js"></script>
+    <script src="../static/assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="../static/assets/js/aos.js"></script>
+    <script src="../static/assets/js/jquery.animateNumber.min.js"></script>
+    <script src="../static/assets/js/scrollax.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+    <script src="../static/assets/js/google-map.js"></script>
+    <script src="../static/assets/js/main.js"></script>
+  
+    </body>
+  </html>
