--- a/templates/up-merchandise.html
+++ b/templates/up-merchandise.html
@@ -64,6 +64,7 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav nav ml-auto">
+	          <li class="nav-item"><a href="/user" class="nav-link" data-nav-section="users"><span>Users</span></a></li>
 	          <li class="nav-item"><a href="/upgallery" class="nav-link" data-nav-section="gallery"><span>Up Gallery</span></a></li>
 	          <li class="nav-item"><a href="/upmerchandise" class="nav-link" data-nav-section="merchandise"><span>Up Merchandise</span></a></li>
             <li class="nav-item">
@@ -120,33 +121,33 @@
         <div class="row justify-content-center pb-5" style="margin-top: -9rem; margin-bottom: -12rem;">
             <section class="room__container" id="room">
                 <div class="room__grid">
-                    {% for item in merchandise %}
-                    <div class="room__card">
-                        <div class="img">
-                            <a href="../static/assets/img/product/{{item.gambar}}" class="icon image-popup d-flex justify-content-center align-items-center" >
-                                <img src="../static/assets/img/product/{{item.gambar}}" class="block-20" alt="Check Your Image" style="height: 450px;">
-                            </a>
-                        </div>
-                        <div class="room__card__details">
-                            <div>
-                                <h4>{{item.nama}}</h4>
-                                <p>{{item.deskripsi}}</p>
-                                <div class="d-flex align-items-center mt-4 meta">
-                                    <p class="mb-0"><a href="/beli?nama={{item.nama}}&harga={{item.harga}}" class="btn btn-primary btn-small">Contact <span class="ion-logo-whatsapp"></span></a></p>
-                                    <h3 class="ml-auto mb-0">Rp. {{item.harga}}</h3>
-                                </div>
-                                <div class="d-flex flex-column align-items-center mt-2">
+                  {% for item in merchandise %}
+                  <div class="room__card">
+                      <div class="img">
+                          <a href="../static/assets/img/product/{{item.gambar}}" class="icon image-popup d-flex justify-content-center align-items-center">
+                              <img src="../static/assets/img/product/{{item.gambar}}" class="block-20" alt="Check Your Image" style="height: 450px;">
+                          </a>
+                      </div>
+                      <div class="room__card__details">
+                          <div>
+                              <h4>{{item.nama}}</h4>
+                              <p>{{item.deskripsi}}</p>
+                              <div class="d-flex align-items-center mt-4 meta">
+                                  <p class="mb-0"><a href="/beli?nama={{item.nama}}&harga={{item.harga}}" class="btn btn-primary btn-small">Contact <span class="ion-logo-whatsapp"></span></a></p>
+                                  <h3 class="ml-auto mb-0 harga-item">Rp. {{item.harga}}</h3>
+                              </div>
+                              <div class="d-flex flex-column align-items-center mt-2">
                                   <div class="w-100">
-                                    <a href="#" class="btn btn-warning btn-small w-100" onclick="editMerchandise('{{ item._id }}')" data-toggle="modal" data-target="#editMerchandiseModal" data-id="{{ item._id }}">Edit <span class="ion-ios-create"></span></a>
+                                      <a href="#" class="btn btn-warning btn-small w-100" onclick="editMerchandise('{{ item._id }}')" data-toggle="modal" data-target="#editMerchandiseModal" data-id="{{ item._id }}">Edit <span class="ion-ios-create"></span></a>
                                   </div>
                                   <div class="w-100" style="margin-top: -0.7rem;">
                                       <a href="/deleteMerchandise/{{item._id}}" class="btn btn-secondary btn-small w-100">Delete <span class="ion-ios-trash"></span></a>
                                   </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  {% endfor %}                  
                 </div>
             </section>
         </div>
@@ -279,6 +280,7 @@
           <div class="ftco-footer-widget mb-4 ml-md-4">
             <h2 class="ftco-heading-2">Links</h2>
             <ul class="list-unstyled">
+              <li><a href="/user"><span class="icon-long-arrow-right mr-2"></span>Users</a></li>
               <li><a href="/upcontact"><span class="icon-long-arrow-right mr-2"></span>Up Gallery</a></li>
               <li><a href="/upmerchandise"><span class="icon-long-arrow-right mr-2"></span>Up Merchandise</a></li>
             </ul>
@@ -306,8 +308,6 @@
       </div>
     </div>
   </footer>
-  
-  
   
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
