--- a/static/assets/css/style-upgallery.css
+++ b/static/assets/css/style-upgallery.css
@@ -113,7 +113,7 @@
   }
 
   /* Modal styles */
-  .modal {
+  .modal1 {
     display: none;
     /* Hidden by default */
     position: fixed;
@@ -134,7 +134,7 @@
     /* Black w/ opacity */
   }
 
-  .modal-content {
+  .modal-content1 {
     background-color: #fefefe;
     margin: 15% auto;
     /* 15% from the top and centered */
@@ -144,18 +144,24 @@
     /* Could be more or less, depending on screen size */
   }
 
-  .close {
+  .close1 {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
   }
 
-  .close:hover,
-  .close:focus {
+  .close1:hover,
+  .close1:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
+  }
+
+  .modal-inner {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   /* Gaya untuk container form */
@@ -193,13 +199,13 @@
     border-radius: 4px;
     font-size: 16px;
     color: #333;
-}
+  }
 
-.form-group select:focus {
-  border-color: #007bff;
-  outline: none;
-  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-}
+  .form-group select:focus {
+    border-color: #007bff;
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+  }
 
   /* Gaya untuk input form */
   .form-group input[type="text"],
@@ -216,36 +222,7 @@
     /* Menghitung padding dan border dalam lebar total */
   }
 
-  /* Gaya untuk tombol Clear */
-  #fjkt-clear,
-  #fan-art-clear,
-  #edit-clear {
-    display: block;
-    /* Menjadikan tombol sebagai blok */
-    padding: 8px 16px;
-    /* Padding vertikal dan horizontal */
-    margin-top: 10px;
-    /* Jarak atas dari tombol Clear */
-    border: none;
-    /* Hilangkan border */
-    background-color: #f44336;
-    /* Warna latar merah */
-    color: white;
-    /* Warna teks putih */
-    border-radius: 4px;
-    /* Sudut lengkung tepi tombol */
-    cursor: pointer;
-    /* Kursor menunjukkan tombol dapat diklik */
-  }
-
-  /* Gaya untuk tombol Clear saat dihover */
-  #fjkt-clear:hover,
-  #fan-art:hover,
-  #edit-clear:hover {
-    background-color: #d32f2f;
-    /* Warna latar merah yang lebih gelap saat dihover */
-  }
-
+  /* Gaya untuk container detail */
   .detail-container {
     display: flex;
     flex-direction: column;
@@ -283,8 +260,76 @@
     /* Spasi atas gambar */
   }
 
+  .separator {
+    width: 100%;
+    display: none;
+    margin: 10px 0; /* Jarak di atas dan di bawah garis */
+    border: none;
+    border-top: 1px solid #ccc; /* Atur gaya dan warna garis */
+  }
+
+  @media (max-width: 600px) {
+    .form-container, .detail-container {
+        width: 100%;
+        float: none;
+        margin-right: 0;
+        margin-bottom: 20px; 
+    }
+
+    .modal-inner {
+        display: flex;
+        flex-direction: column; 
+    }
+
+    .modal-inner > * {
+        width: 100%; 
+        margin-bottom: 10px; 
+    }
+
+    .detail-container {
+        margin-top: 10px; 
+    }
+
+    .separator {
+        display: block; 
+    }
+  }
+
+  /* Gaya untuk tombol Clear */
+  #fjkt-clear,
+  #fan-art-clear,
+  #edit-clear,
+  #merchandise-clear {
+    display: block;
+    /* Menjadikan tombol sebagai blok */
+    padding: 8px 16px;
+    /* Padding vertikal dan horizontal */
+    margin-top: 10px;
+    /* Jarak atas dari tombol Clear */
+    border: none;
+    /* Hilangkan border */
+    background-color: #f44336;
+    /* Warna latar merah */
+    color: white;
+    /* Warna teks putih */
+    border-radius: 4px;
+    /* Sudut lengkung tepi tombol */
+    cursor: pointer;
+    /* Kursor menunjukkan tombol dapat diklik */
+  }
+
+  /* Gaya untuk tombol Clear saat dihover */
+  #fjkt-clear:hover,
+  #fan-art:hover,
+  #edit-clear:hover,
+  #merchandise-clear:hover {
+    background-color: #d32f2f;
+    /* Warna latar merah yang lebih gelap saat dihover */
+  }
+
   #fjkt-save,
   #fan-art-save,
+  #merchandise-save,
   #edit-save {
     padding: 8px 16px;
     /* Padding vertikal dan horizontal */
@@ -302,16 +347,9 @@
     /* Kursor menunjukkan tombol dapat diklik */
   }
 
-  #fjkt-save:hover #fan-art-save:hover #edit-save:hover{
+  #fjkt-save:hover #fan-art-save:hover #edit-save:hover #merchandise-save:hover {
     background-color: #45a049;
     /* Warna latar hijau yang lebih gelap saat dihover */
-  }
-
-
-  .modal-inner {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
   }
 
   /* Media query for smaller screens */
